[package]
name = "test_nacos_client"
version = "0.1.0"
edition = "2021"

[dependencies]
nacos_rust_client = "0.3"
tokio = {version="1",features=["full"]}
anyhow="1"
serde = {version="1" ,features=["derive"]}
serde_urlencoded = "0.6.1"
serde_json="1"
log="0"
env_logger = "0.7"

[[bin]]
name = "test_main"
path = "src/main-dev.rs"