[package]
name = "test_http_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
tokio = { version = "1", features = ["full"] }
actix-session = { version = "0.10.0", features = ["cookie-session"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
log4rs = "1.1.0"
log = "0.4"
dotenv = "0.15"
prometheus = "0.13"
sys-info = "0.9.0"
